--- a/source/style.less
+++ b/source/style.less
@@ -10,7 +10,7 @@ body
 {
     color: white;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    background: url('/images/background3.jpg') no-repeat center center fixed;
+    background: url('/images/background.jpg') no-repeat center center fixed;
     background-color: black;
     background-size: cover;
 }
