Fixed chrome download issues

--- a/source/style.less
+++ b/source/style.less
@@ -139,6 +139,7 @@ section > figure > figcaption
     overflow: hidden;
     text-align: right;
     position: relative;
+    border-radius: 8px;
     white-space: nowrap;
     padding: 10px 10px 10px 10px;
     background: rgba(0, 0, 0, 0.3);
