--- a/source/style.less
+++ b/source/style.less
@@ -182,6 +182,7 @@ section > figure > div
     top: -38px;
     width: 0px;
     height: 25px;
+    color: black;
     overflow: hidden;
     text-shadow: none;
     padding-top: 7px;
@@ -189,10 +190,9 @@ section > figure > div
     position: relative;
     border-radius: 8px;
     padding-right: 10px;
+    margin-right: 20px;
     white-space: nowrap;
-    background-color: #555;
-    background-image: -webkit-linear-gradient(left, #666, #555);
-    background-image: -moz-linear-gradient(left, #666, #555);
+    background-color: #3a87ad;
 }
 
 #button
@@ -228,6 +228,7 @@ section > figure > div
 .ctr-float
 {
     float: left;
+    color: black;
     height: 24px;
     min-width: 35px;
     cursor: pointer;
@@ -251,16 +252,16 @@ section > figure > div
     border-bottom-right-radius: 8px;
 }
 
-.ctr-color-1 { background: #444; }
-.ctr-color-2 { background: #555; }
-.ctr-color-3 { background: #666; }
-.ctr-color-4 { background: #777; }
-.ctr-from-1  { border-left: 15px solid #444; float: left; }
-.ctr-from-2  { border-left: 15px solid #555; float: left; }
-.ctr-from-3  { border-left: 15px solid #666; float: left; }
-.ctr-to-2    { border-top: 15px solid #555; border-bottom: 15px solid #555; }
-.ctr-to-3    { border-top: 15px solid #666; border-bottom: 15px solid #666; }
-.ctr-to-4    { border-top: 15px solid #777; border-bottom: 15px solid #777; }
+.ctr-color-1 { background: #dd514c; }
+.ctr-color-2 { background: #faa732; }
+.ctr-color-3 { background: #5eb95e; }
+.ctr-color-4 { background: #0e90d2; }
+.ctr-from-1  { border-left: 15px solid #dd514c; float: left; }
+.ctr-from-2  { border-left: 15px solid #faa732; float: left; }
+.ctr-from-3  { border-left: 15px solid #5eb95e; float: left; }
+.ctr-to-2    { border-top: 15px solid #faa732; border-bottom: 15px solid #faa732; }
+.ctr-to-3    { border-top: 15px solid #5eb95e; border-bottom: 15px solid #5eb95e; }
+.ctr-to-4    { border-top: 15px solid #0e90d2; border-bottom: 15px solid #0e90d2; }
 
 .drop-arrow
 {
@@ -291,5 +292,5 @@ section > figure > div
 .drop-content > ul > li { padding: 5px 5px 5px 5px; overflow: hidden; }
 .drop-content > ul > li.checked:before { content: '✔'; float: left; }
 .drop-content > ul > li.checked:after  { clear: both; }
-.drop-content > ul > li:hover { border-radius: 6px; background: #999; }
+.drop-content > ul > li:hover { border-radius: 6px; background: #3399dd; }
 .drop-content > ul > hr { height: 1px; background: #999; border: none; }
