Updated font and info

--- a/source/style.less
+++ b/source/style.less
@@ -229,12 +229,13 @@ section > figure > div
 {
     float: left;
     color: black;
-    height: 24px;
+    height: 30px;
     min-width: 35px;
     cursor: pointer;
-    padding-top: 6px;
+    line-height: 29px;
     padding-left: 6px;
     padding-right: 4px;
+    vertical-align: middle;
 }
 
 .ctr-start
